auto-test/tests/chapter_18/invalid_types/initializers/initialize_nested_static_struct_member_wrong_type.c
struct s {
  double d;
  void *arr[3];
};


struct s x = {0.0, {1.0}};